--- a/ramsecaf/public/css/style.css
+++ b/ramsecaf/public/css/style.css
@@ -35,6 +35,10 @@ h2 {
   font-family: 'Dancing Script', cursive;
 }
 
+.container {
+  width: relative;
+}
+
 .heading_container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -91,6 +95,8 @@ a:focus {
 
 /*header section*/
 .hero_area {
+  position: relative;
+  min-height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -98,9 +104,7 @@ a:focus {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 100%;
-  height: 100%;        
-
+          
 }
 
 #loginbg {
@@ -152,21 +156,19 @@ a:focus {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: auto;
+  height: auto;
   margin-bottom: 15%;
 }
 
 #customerbg {
   background-color: rgb(54,66,140);
-  height: 100%;
-  width: 100%;
-  position: fixed;
+  height: auto;
+  width: fit-content;
 }
 
 #apccafbg {
-  position: fixed;
-  height: 100%;
+  height: auto;
   width: 100%;
   opacity: 50%;
 }
@@ -261,9 +263,7 @@ a:focus {
 }
 
 .sub_page .hero_area {
-  background-color: #000000;
-  height: 100%;
-  width: 100%;
+  min-height: auto;
 }
 
 .sub_page .hero_area .bg-box {
@@ -624,44 +624,6 @@ a:focus {
           transform: scale(1.1);
 }
 
-#menucontainer {
-  display: flex;
-  justify-content: center; /* Center the items horizontally */
-  align-items: center; /* Center the items vertically */
-  width: auto;
-  margin: 0 auto;
-}
-
-#foodcontainer {
-  width: 100vw;
-}
-
-#foodbox{
-  height: 40vh;
-  width: 20vh;
-  display: flex;
-  flex-direction: column; /* Stack elements vertically within each foodbox */
-  justify-content: center; /* Center the content vertically within each foodbox */
-  align-items: center;
-}
-
-#fooddetails {
-  height: 45vh;
-  font-size: 12px;
-}
-
-#fooddetails h5{
-  font-size: 1.5em;
-}
-
-#fooddetails h6{
-  font-size: 1em;
-}
-
-#foodimg {
-  height: 40vh;
-}
-
 .food_section .filters_menu {
   padding: 0;
   display: -webkit-box;
@@ -677,18 +639,22 @@ a:focus {
 
 }
 
+.food_section {
+  background-color: rgba(222,172,72,0.40);
+  min-height: 850px;
+  padding-bottom: 10%;
+}
+
 .food_section .filters_menu li {
   padding: 7px 25px;
   cursor: pointer;
   border-radius: 25px;
-  position: relative;
   
 }
 
 .food_section .filters_menu li.active {
   background-color: #fcae28;
   color: #ffffff;
-  position: relative;
 }
 
 .food_section .box {
@@ -713,7 +679,7 @@ a:focus {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 15vh;
+  height: 215px;
   border-radius: 0 0 0 45px;
   margin: -1px;
   padding: 25px;
@@ -786,7 +752,6 @@ a:focus {
       -ms-flex-pack: center;
           justify-content: center;
   margin-top: 45px;
-  position: relative;
 }
 
 .food_section .btn-box a {
